--- a/vercel.json
+++ b/vercel.json
@@ -19,5 +19,8 @@
   "github": {
     "enabled": true,
     "silent": true
-  }
+  },
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite"
 } 
