--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.323.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.55.0",
     "react-image-crop": "^11.0.5",
     "react-router-dom": "^6.22.1",
     "tailwind-merge": "^2.2.1",
